--- a/package.json
+++ b/package.json
@@ -1,1 +1,19 @@
-{"dependencies":{"elysia":"^1.1.23"}}
+{
+    "name": "backend",
+    "scripts": {
+        "dev": "tsx watch --env-file=.env src/index.ts "
+    },
+    "devDependencies": {
+        "@types/node": "^22.7.9",
+        "eslint": "^9.13.0",
+        "prettier": "^3.3.3",
+        "tsx": "^4.19.1",
+        "typescript": "^5.6.3"
+    },
+    "dependencies": {
+        "fastify": "^5.0.0",
+        "fastify-file-routes": "^1.1.2",
+        "pg": "^8.13.0",
+        "pg-ipc": "^1.0.5"
+    }
+}
