--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "name": "backend",
     "scripts": {
-        "dev": "tsx watch --env-file=.env src/index.ts "
+        "dev": "tsx watch --env-file=.env src/index.ts",
+        "build": "tsc",
+        "start": "node dist/index.js"
     },
     "devDependencies": {
         "@types/node": "^22.7.9",
