--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "dotenv": "^16.4.5",
         "fastify": "^5.0.0",
         "fastify-file-routes": "^1.1.2",
         "pg": "^8.13.0",
