chore: update example

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
-# Server Config
-SERVER_PORT=8080
-SERVER_HOST=localhost
-
-# Postgres Config
-POSTGRES_URL=localhost:5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgress
-
-# Or if you prefer, you can use the following format
-POSTGRES_FULL_URL=postgres://postgres:postgress@localhost:5432
+# Set this to either development or production.
+NODE_ENV=production
+# Postgres connection string
+POSTGRES_URL="postgresql://USERNAME:PASSWORD@IP:PORT/DBNAME"
+# Cloudflare Turnstile site secret
+TURNSTILE_SECRET=0x0000000000000000000000000000000000
+# SMTP2Go API key
+SMTP2GO_API_KEY=api-xxxxxxxxxxx
+# Template ID for the SMTP2Go API
+SMTP2GO_REGISTRATION_TEMPLATE=0000000
+# Hostname for the web frontend
+CLIENT_HOSTNAME="chat.nin0.dev"
