--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "bcrypt": "^5.1.1",
         "fastify": "^5.0.0",
+        "fastify-decorators": "^3.16.1",
         "fastify-file-routes": "^1.1.2",
         "pg": "^8.13.0",
         "pg-ipc": "^1.0.5"
