--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Set this to either development or production.
 NODE_ENV=production
+# Server info
+HOST=localhost
+PORT=3000
 # Postgres connection string
 POSTGRES_URL="postgresql://USERNAME:PASSWORD@IP:PORT/DBNAME"
 # Cloudflare Turnstile site secret
