--- a/.github/workflows/prettier-ci.yml
+++ b/.github/workflows/prettier-ci.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: npm ci
-    - run: prettier --check
+    - run: node_modules/.bin/prettier --check
