--- a/.github/workflows/prettier-ci.yml
+++ b/.github/workflows/prettier-ci.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: npm ci
-    - run: ls node_modules/.bin
+    - run: ls ./{,node_modules/{,.bin/}}
     - run: node_modules/.bin/prettier --check
