--- a/.github/workflows/prettier-ci.yml
+++ b/.github/workflows/prettier-ci.yml
@@ -10,6 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
+            - run: npm i -g pnpm
             - run: pnpm ci
             - run: ls ./{,node_modules/{,.bin/}}
             - run: node_modules/.bin/prettier --check
