--- a/tsconfig.json
+++ b/tsconfig.json
@@ -106,6 +106,6 @@
         /* Completeness */
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
         "skipLibCheck": true /* Skip type checking all .d.ts files. */,
-        "experimentalDecorators": true /* Enable experimental support for decorators */,
+        "experimentalDecorators": true /* Enable experimental support for decorators */
     }
 }
