--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "name": "backend",
+    "private": true,
+    "main": "dist/index.js",
     "scripts": {
         "dev": "tsx watch --env-file=.env --include \"**/*\" src/index.ts",
         "build": "tsc",
