--- a/.github/workflows/prettier-ci.yml
+++ b/.github/workflows/prettier-ci.yml
@@ -1,9 +1,9 @@
 name: Prettier CI
 
 on:
-    push:
-    pull_request:
-    workflow_dispatch:
+   pull_request:
+   merge_group:
+   workflow_dispatch:
 
 jobs:
     build:
