Set up prisma schema

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=production
 HOST=localhost
 PORT=3000
 # Postgres connection string
-POSTGRES_URL="postgresql://postgres:postgres@localhost:5432/nin0chat"
+POSTGRES_URL="postgresql://postgres:postgres@localhost:5432/nin0chat?schema=public"
 # Cloudflare Turnstile site secret
 TURNSTILE_SECRET=0x0000000000000000000000000000000000
 # SMTP2Go API key
