--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
         "eslint": "^9.13.0",
         "pino-pretty": "^11.3.0",
         "prettier": "^3.3.3",
+        "prisma": "^5.21.1",
         "tsx": "^4.19.1",
         "typescript": "^5.6.3"
     },
     "dependencies": {
+        "@prisma/client": "^5.21.1",
         "bcrypt": "^5.1.1",
         "fastify": "^5.0.0",
         "fastify-decorators": "^3.16.1",
