--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "scripts": {
         "dev": "tsx watch --env-file=.env --include \"**/*\" src/index.ts",
         "build": "tsc",
-        "start": "node dist/index.js"
+        "start": "node dist/index.js",
+        "db:markinit": "prisma migrate resolve --applied 0_init",
+        "db:migrate:prod": "prisma migrate deploy",
+        "db:migrate:dev": "prisma migrate dev"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
